dataset1235/2025-2/2318198438/users/1301535012/executions/2601575092_3530285078.log
== SUBMISSION (2025-08-31 23:22:16)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:22:17)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:23:27)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em
1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:23:40)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:21:53)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.LOWER())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:19:40)
-- CODE: 
string = "AUGUSTA ADA BYRON A CONDESSA DE LOVELACE NASCEU EM 1815 NA INGLATERRA: "
print(string.LOWER())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:23:12)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
1815, na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:23:56)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:23:11)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
1815, na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:22:15)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:23:37)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:23:53)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron a condessa de lovelace nasceu em 1815 na inglaterra:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:21:56)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.LOWER())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:22:00)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.LOWER())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:23:34)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:21:58)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em 1815 na Inglaterra: "
print(string.LOWER())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.LOWER())
          ^^^^^^^^^^^^
AttributeError: 'str' object has no attribute 'LOWER'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:23:38)
-- CODE: 
string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 23:23:24)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em
1815 na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 23:23:14)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
1815, na Inglaterra: "
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em
             ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
